--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 $blue: rgb(0, 0, 153);
 $yellow: rgb(255,204,0);
 $orange: rgb(255,153,0);
+$lightyellow: rgb(255,255,205);
 $gray: rgb(180,180,180);
 $graydark: rgb(104,104,104);
 $deco: none;
@@ -24,30 +25,180 @@ $radius: 15px;
 	margin-left: -15px;
 }
 .btnZ, .btnW, .btnM{
-	text-decoration: $deco;
 	border-top-left-radius: $radius;
 	text-align: center;
 	font-size: 15px;
 	font-weight: bold;
-
+	color: black;
+	&:hover {
+		text-decoration: $deco;
+		color: white;
+	}
 }
 .btnZ {
 	background-color: $yellow;
 	box-shadow: 5px 0px 0px $orange;
 	border-top-left-radius: $radius;
 	text-align: center;
-	margin-left: -10px;
+	margin-left: 0px;
+
 }
 .btnW, {
 	background-color: $gray;
 	box-shadow: 5px 0px 0px $graydark;
-	margin-left: 5px;
+	margin-left: 0px;
 }
 .btnM, {
 	background-color: $gray;
 	box-shadow: 5px 0px 0px $graydark;
-	margin-left: 5px;
+	margin-left: 0px;
 }
 .headline {
-	background-color: linear-gradient(to bottom, black 50%,white 100%);
+	background-color: $yellow;
+	padding: 5px;
+	border-bottom: 3px solid $orange;
+}
+.content {
+	padding-top: 10px;
+}
+.search {
+	.t{
+		background-color: $yellow;
+		text-decoration: underline;
+	a {
+		color: $blue;
+		font-weight: bold;
+	&:hover {
+		color: white;
+	}
+	}
+	}
+}
+.search {
+	background-color: $lightyellow;
+}
+.op {
+	padding-bottom: 20px;
+	padding-top: 10px;
+	padding-right: 10px;
+	.sel {
+		padding-top: 3px;
+		
+	}
+	.btnn {
+		text-align: center;
+		padding-top: 2px;
+		
+	}
+}
+.line {
+	background-color: $orange;
+	height: 2px;
+}
+.aktualijos {
+	border-top: 2px solid $orange;
+	border-bottom: 2px solid $orange;
+	a {
+		text-decoration: underline;
+	}
+}
+.leftside {
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+	.l1 {
+		
+		background-color: $lightyellow;
+	}
+	.l2 {
+		background-color: $blue;
+	}
+}
+.s {
+	padding-left: 10px;
+}
+
+
+
+
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    transition: margin-left .5s;
+    padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (min-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+    
+    
+    .menu {
+    	visibility: visible;
+    }
+}
+@media screen and (min-width: 450px) {
+.menu {
+	visibility: hidden;
+}
+
+}
+@media screen and (max-width: 450px) {
+
+.top {
+    	visibility: hidden;
+    	padding: 0px;
+    	margin: 0px;
+    	display: none;
+}
+.btnZ, .btnW, .btnM{
+	border-radius: 0px;
+
+}
+}
+.menu {
+	
+	background-color: black;
+	height: 20px;
+	width: 20px;
 }
