--- a/scss/style.scss
+++ b/scss/style.scss
@@ -198,6 +198,11 @@ $radius: 15px;
 }
 .menu {
 	color: white;
-	background-color: black;
 	
+	
+}
+.but {
+	position: sticky;
+	background-color: black;
+	top: 0;
 }
