--- a/scss/style.scss
+++ b/scss/style.scss
@@ -103,10 +103,7 @@ $radius: 15px;
 	}
 }
 .leftside {
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-left: 10px;
-	margin-right: 10px;
+	
 	.l1 {
 		
 		background-color: $lightyellow;
@@ -153,8 +150,7 @@ $radius: 15px;
 }
 
 /* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-    position: absolute;
+.sidenav .closebtn { 
     top: 0;
     right: 25px;
     font-size: 36px;
@@ -171,8 +167,6 @@ $radius: 15px;
 @media screen and (min-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
-    
-    
     .menu {
     	visibility: visible;
     }
@@ -181,7 +175,25 @@ $radius: 15px;
 .menu {
 	visibility: hidden;
 }
-
+.but {
+	visibility: hidden;
+	display: none;
+}
+.logcen {
+	visibility: hidden;
+	display: none;
+}
+.l1 {
+	margin-right: 10px;
+	margin-left: 10px;
+	.l2 {
+		color: white;
+		border-top-right-radius: $radius;
+	}
+}
+.btnW, .btnM{
+	margin-left: 5px;
+	}
 }
 @media screen and (max-width: 450px) {
 
@@ -193,13 +205,18 @@ $radius: 15px;
 }
 .btnZ, .btnW, .btnM{
 	border-radius: 0px;
-
+	box-shadow: none;
+	margin-left: 0px;
 }
+.l1 {
+	margin: 0px;
+	visibility: hidden;
+	display: none;
+}
+
 }
 .menu {
 	color: white;
-	
-	
 }
 .but {
 	position: sticky;
