--- a/scss/style.scss
+++ b/scss/style.scss
@@ -184,11 +184,14 @@ $radius: 15px;
 	display: none;
 }
 .l1 {
-	margin-right: 10px;
-	margin-left: 10px;
+	margin-right: 15px !important;
 	.l2 {
 		color: white;
 		border-top-right-radius: $radius;
+		padding-left: 30px;
+	}
+	.l3 {
+		padding-left: 30px;
 	}
 }
 .btnW, .btnM{
